--- a/voronoi.html
+++ b/voronoi.html
@@ -63,7 +63,7 @@
 
       vor.canvas.points = new Array(numPoints);
       for (let i = 0; i < numPoints; i++) {
-        vor.canvas.points[i] = vor.canvas.getPoint(Math.floor(Math.random() * (vor.canvas.width + 1)), Math.floor(Math.random() * (vor.canvas.height + 1)));
+        vor.canvas.points[i] = vor.canvas.getPoint(Math.floor(Math.random() * vor.canvas.width), Math.floor(Math.random() * vor.canvas.height));
       }
 
       /*var pointSpacing = 20;
