Fix Clear button bug

--- a/glVoronoi.html
+++ b/glVoronoi.html
@@ -209,8 +209,8 @@
         function clearPoints(evt) {
             this.vor.canvas.points = [];
             this.vor.canvas.clearAll();
-            vor.querySelector(".drawBtn").disabled = true;
-            vor.querySelector(".colorChange").disabled = true;
+            this.vor.querySelector(".drawBtn").disabled = true;
+            this.vor.querySelector(".colorChange").disabled = true;
         }
 
         function changeColors(evt) {
