--- a/voronoi.html
+++ b/voronoi.html
@@ -269,16 +269,42 @@
         }
       }
 
+      function findPoint(a, points) {
+        if(!a.point) {
+          a.point = findClosestPoint(points, a.x, a.y);
+        }
+      }
+
+      function checkHorizLine(a, b, points, isMin) {
+        let m = a.point.y;
+        for(let x = a.x; x <= b.x; x++) {
+          const t = pixelMap[a.y][x];
+          findPoint(t, points);
+          if(isMin ? t.point.y < m : t.point.y > m) {
+            m = t.point.y;
+          }
+        }
+        return m;
+      }
+
+      function checkVertLine(a, b, points, isMin) {
+        let m = a.point.x;
+        for(let y = a.y; y <= b.y; y++) {
+          const t = pixelMap[y][a.x];
+          findPoint(t, points);
+          if(isMin ? t.point.x < m : t.point.x > m) {
+            m = t.point.x;
+          }
+        }
+        return m;
+      }
+
       function evaluateCorners(y, x, height, width, points) {
         const a = pixelMap[y][x];
         const b = pixelMap[y][x + width - 1];
         const c = pixelMap[y + height - 1][x];
         const d = pixelMap[y + height - 1][x + width - 1];
-        [a,b,c,d].forEach(corner => {
-          if(!corner.point) {
-            corner.point = findClosestPoint(points, corner.x, corner.y);
-          }
-        });
+        [a,b,c,d].forEach(corner => findPoint(corner, points));
 
         if(a.point === b.point && b.point === c.point && c.point === d.point) {
           fillSquare(y, x, height, width, a.point);
@@ -292,6 +318,9 @@
               fillSquare(a.y, a.x, 1, width, a.point);
             }
             points = points.filter(p => p.y >= a.point.y);
+          } else {
+            const m = checkHorizLine(a, b, points, true);
+            points = points.filter(p => p.y >= m);
           }
           if(b.point === d.point) {
             if(a.point === b.point) {
@@ -301,6 +330,9 @@
               fillSquare(b.y, b.x, height, 1, b.point);
             }
             points = points.filter(p => p.x <= b.point.x);
+          } else {
+            const m = checkVertLine(b, d, points, false);
+            points = points.filter(p => p.x <= m);
           }
           if(c.point === d.point) {
             if(b.point === c.point) {
@@ -310,6 +342,9 @@
               fillSquare(c.y, c.x, 1, width, c.point);
             }
             points = points.filter(p => p.y <= c.point.y);
+          } else {
+            const m = checkHorizLine(c, d, points, false);
+            points = points.filter(p => p.y <= m);
           }
           if(a.point === c.point) {
             if(c.point === d.point) {
@@ -319,6 +354,9 @@
               fillSquare(a.y, a.x, height, 1, a.point);
             }
             points = points.filter(p => p.x >= a.point.x);
+          } else {
+            const m = checkVertLine(a, c, points, true);
+            points = points.filter(p => p.x >= m);
           }
           evaluateCorners(y, x, Math.floor(height / 2) || 1, Math.floor(width / 2) || 1, points);
           evaluateCorners(y, x + Math.floor(width / 2), Math.floor(height / 2) || 1, Math.ceil(width / 2), points);
@@ -371,16 +409,42 @@
         }
       }
 
+      function findPoint(a, points) {
+        if(!a.point) {
+          a.point = findClosestPoint(points, a.x + startX, a.y + startY);
+        }
+      }
+
+      function checkHorizLine(a, b, points, isMin) {
+        let m = a.point.y;
+        for(let x = a.x; x <= b.x; x++) {
+          const t = pixelMap[a.y][x];
+          findPoint(t, points);
+          if(isMin ? t.point.y < m : t.point.y > m) {
+            m = t.point.y;
+          }
+        }
+        return m;
+      }
+
+      function checkVertLine(a, b, points, isMin) {
+        let m = a.point.x;
+        for(let y = a.y; y <= b.y; y++) {
+          const t = pixelMap[y][a.x];
+          findPoint(t, points);
+          if(isMin ? t.point.x < m : t.point.x > m) {
+            m = t.point.x;
+          }
+        }
+        return m;
+      }
+
       function evaluateCorners(y, x, height, width, points) {
         const a = pixelMap[y][x];
         const b = pixelMap[y][x + width - 1];
         const c = pixelMap[y + height - 1][x];
         const d = pixelMap[y + height - 1][x + width - 1];
-        [a,b,c,d].forEach(corner => {
-          if(!corner.point) {
-            corner.point = findClosestPoint(points, corner.x + startX, corner.y + startY);
-          }
-        });
+        [a,b,c,d].forEach(corner => findPoint(corner, points));
 
         if(a.point === b.point && b.point === c.point && c.point === d.point) {
           fillSquare(y, x, height, width, a.point);
@@ -389,18 +453,30 @@
           if(a.point === b.point) {
             fillSquare(a.y, a.x, 1, width, a.point);
             points = points.filter(p => p.y >= a.point.y);
+          } else {
+            const m = checkHorizLine(a, b, points, true);
+            points = points.filter(p => p.y >= m);
           }
           if(b.point === d.point) {
             fillSquare(b.y, b.x, height, 1, b.point);
             points = points.filter(p => p.x <= b.point.x);
+          } else {
+            const m = checkVertLine(b, d, points, false);
+            points = points.filter(p => p.x <= m);
           }
           if(c.point === d.point) {
             fillSquare(c.y, c.x, 1, width, c.point);
             points = points.filter(p => p.y <= c.point.y);
+          } else {
+            const m = checkHorizLine(c, d, points, false);
+            points = points.filter(p => p.y <= m);
           }
           if(a.point === c.point) {
             fillSquare(a.y, a.x, height, 1, a.point);
             points = points.filter(p => p.x >= a.point.x);
+          } else {
+            const m = checkVertLine(a, c, points, true);
+            points = points.filter(p => p.x >= m);
           }
           evaluateCorners(y, x, Math.floor(height / 2) || 1, Math.floor(width / 2) || 1, points);
           evaluateCorners(y, x + Math.floor(width / 2), Math.floor(height / 2) || 1, Math.ceil(width / 2), points);
