--- a/voronoi.html
+++ b/voronoi.html
@@ -242,129 +242,7 @@
       console.log(`${elapsed / 1000}s`);
     }
 
-    function fillAreasGrid() {
-      const startTime = new Date();
-
-      const pixelMap = [...Array(this.height)].map((_, y) => [...Array(this.width)].map((_, x) => ({y, x, point: undefined})));
-
-      function fillSquare(y, x, height, width, point) {
-        for(let row = y; row < y + height; row++) {
-          for(let col = x; col < x + width; col++) {
-            pixelMap[row][col].point = point;
-          }
-        }
-      }
-
-      function findPoint(a, points) {
-        if(!a.point) {
-          a.point = findClosestPoint(points, a.x, a.y);
-        }
-      }
-
-      function checkHorizLine(a, b, points, isMin) {
-        let m = a.point.y;
-        for(let x = a.x; x <= b.x; x++) {
-          const t = pixelMap[a.y][x];
-          findPoint(t, points);
-          if(isMin ? t.point.y < m : t.point.y > m) {
-            m = t.point.y;
-          }
-        }
-        return m;
-      }
-
-      function checkVertLine(a, b, points, isMin) {
-        let m = a.point.x;
-        for(let y = a.y; y <= b.y; y++) {
-          const t = pixelMap[y][a.x];
-          findPoint(t, points);
-          if(isMin ? t.point.x < m : t.point.x > m) {
-            m = t.point.x;
-          }
-        }
-        return m;
-      }
-
-      function evaluateCorners(y, x, height, width, points) {
-        const a = pixelMap[y][x];
-        const b = pixelMap[y][x + width - 1];
-        const c = pixelMap[y + height - 1][x];
-        const d = pixelMap[y + height - 1][x + width - 1];
-        [a,b,c,d].forEach(corner => findPoint(corner, points));
-
-        if(a.point === b.point && b.point === c.point && c.point === d.point) {
-          fillSquare(y, x, height, width, a.point);
-        }
-        else {
-          if(a.point === b.point) {
-            fillSquare(a.y, a.x, 1, width, a.point);
-            points = points.filter(p => p.y >= a.point.y);
-          } else {
-            const m = checkHorizLine(a, b, points, true);
-            points = points.filter(p => p.y >= m);
-          }
-          if(b.point === d.point) {
-            fillSquare(b.y, b.x, height, 1, b.point);
-            points = points.filter(p => p.x <= b.point.x);
-          } else {
-            const m = checkVertLine(b, d, points, false);
-            points = points.filter(p => p.x <= m);
-          }
-          if(c.point === d.point) {
-            fillSquare(c.y, c.x, 1, width, c.point);
-            points = points.filter(p => p.y <= c.point.y);
-          } else {
-            const m = checkHorizLine(c, d, points, false);
-            points = points.filter(p => p.y <= m);
-          }
-          if(a.point === c.point) {
-            fillSquare(a.y, a.x, height, 1, a.point);
-            points = points.filter(p => p.x >= a.point.x);
-          } else {
-            const m = checkVertLine(a, c, points, true);
-            points = points.filter(p => p.x >= m);
-          }
-          evaluateCorners(y, x, Math.floor(height / 2) || 1, Math.floor(width / 2) || 1, points);
-          evaluateCorners(y, x + Math.floor(width / 2), Math.floor(height / 2) || 1, Math.ceil(width / 2), points);
-          evaluateCorners(y + Math.floor(height / 2), x, Math.ceil(height / 2), Math.floor(width / 2) || 1, points);
-          evaluateCorners(y + Math.floor(height / 2), x + Math.floor(width / 2), Math.ceil(height / 2), Math.ceil(width / 2), points);
-        }
-      }
-
-      evaluateCorners(0, 0, this.height, this.width, this.points);
-
-      const imgData = this.ctx.createImageData(this.width, this.height);
-      for (let y = 0; y < this.height; y++) {
-        for (let x = 0; x < this.width; x++) {
-          const closestPoint = pixelMap[y][x].point;
-          applyColorToImage(imgData, this.width, x, y, closestPoint?.colorArray ?? [0xFF, 0xFF, 0xFF]);
-        }
-      }
-      this.ctx.putImageData(imgData, 0, 0);
-      if (!this.image) this.drawPoints();
-      this.isDrawn = true;
-
-      const elapsed = (new Date()) - startTime;
-      console.log(`${elapsed / 1000}s`);
-    }
-
-    function voronoiPixel(y, x, width, points) {
-      return [...findClosestPoint(points, x, y).colorArray, 0xFF];
-    }
-
-    const runPixelWorkers = initPixelWorkers(voronoiPixel, [findClosestPoint, sqDistanceTo]);
-
-    async function fillAreasBruteParallel() {
-      const startTime = new Date();
-      const imgData = await runPixelWorkers(this.width, this.height, {points: this.points});
-      this.ctx.putImageData(imgData, 0, 0);
-      if (!this.image) this.drawPoints();
-      this.isDrawn = true;
-      const elapsed = (new Date()) - startTime;
-      console.log(`${elapsed / 1000}s`);
-    }
-
-    function gridWorker(startY, startX, height, width, points) {
+    function checkGrid(startY, startX, height, width, points) {
       const pixelMap = [...Array(height)].map((_, y) => [...Array(width)].map((_, x) => ({y, x, point: undefined})));
 
       function fillSquare(y, x, height, width, point) {
@@ -453,6 +331,48 @@
 
       evaluateCorners(0, 0, height, width, points);
 
+      return pixelMap;
+    }
+
+    function fillAreasGrid() {
+      const startTime = new Date();
+
+      const pixelMap = checkGrid(0, 0, this.height, this.width, this.points);
+
+      const imgData = this.ctx.createImageData(this.width, this.height);
+      for (let y = 0; y < this.height; y++) {
+        for (let x = 0; x < this.width; x++) {
+          const closestPoint = pixelMap[y][x].point;
+          applyColorToImage(imgData, this.width, x, y, closestPoint?.colorArray ?? [0xFF, 0xFF, 0xFF]);
+        }
+      }
+      this.ctx.putImageData(imgData, 0, 0);
+      if (!this.image) this.drawPoints();
+      this.isDrawn = true;
+
+      const elapsed = (new Date()) - startTime;
+      console.log(`${elapsed / 1000}s`);
+    }
+
+    function voronoiPixel(y, x, width, points) {
+      return [...findClosestPoint(points, x, y).colorArray, 0xFF];
+    }
+
+    const runPixelWorkers = initPixelWorkers(voronoiPixel, [findClosestPoint, sqDistanceTo]);
+
+    async function fillAreasBruteParallel() {
+      const startTime = new Date();
+      const imgData = await runPixelWorkers(this.width, this.height, {points: this.points});
+      this.ctx.putImageData(imgData, 0, 0);
+      if (!this.image) this.drawPoints();
+      this.isDrawn = true;
+      const elapsed = (new Date()) - startTime;
+      console.log(`${elapsed / 1000}s`);
+    }
+
+    function gridWorker(startY, startX, height, width, points) {
+      const pixelMap = checkGrid(startY, startX, height, width, points);
+
       const imgData = new ImageData(width, height);
       for (let y = 0; y < height; y++) {
         for (let x = 0; x < width; x++) {
@@ -465,7 +385,7 @@
 
     const gridWidth = 4;
     const gridHeight = 4;
-    const gridWorkers = initWorkers(gridWorker, [findClosestPoint, sqDistanceTo, applyColorToImage], undefined, gridHeight * gridWidth);
+    const gridWorkers = initWorkers(gridWorker, [checkGrid, findClosestPoint, sqDistanceTo, applyColorToImage], undefined, gridHeight * gridWidth);
 
     async function fillAreasGridParallel() {
       const startTime = new Date();
