--- a/voronoi.html
+++ b/voronoi.html
@@ -17,9 +17,9 @@
       vor.canvas.clearAll = clearAll;
       vor.canvas.drawPoints = drawPoints;
       //vor.canvas.fillAreas = fillAreasBrute;
-      //vor.canvas.fillAreas = fillAreasGrid;
+      vor.canvas.fillAreas = fillAreasGrid;
       //vor.canvas.fillAreas = fillAreasBruteParallel;
-      vor.canvas.fillAreas = fillAreasGridParallel;
+      //vor.canvas.fillAreas = fillAreasGridParallel;
       vor.pointCount = vor.querySelector(".pointCount");
       vor.canvas.addEventListener("click", addPoint);
       vor.canvas.addEventListener("dragover", function (evt) {
@@ -283,6 +283,9 @@
         return m;
       }
 
+      const outerWidth = width;
+      const outerHeight = height;
+
       function evaluateCorners(y, x, height, width, points) {
         const a = pixelMap[y][x];
         const b = pixelMap[y][x + width - 1];
@@ -297,28 +300,28 @@
           if(a.point === b.point) {
             fillSquare(a.y, a.x, 1, width, a.point);
             points = points.filter(p => p.y >= a.point.y);
-          } else {
+          } else if(a.y !== 0) {
             const m = checkHorizLine(a, b, points, true);
             points = points.filter(p => p.y >= m);
           }
           if(b.point === d.point) {
             fillSquare(b.y, b.x, height, 1, b.point);
             points = points.filter(p => p.x <= b.point.x);
-          } else {
+          } else if(b.x !== outerWidth - 1) {
             const m = checkVertLine(b, d, points, false);
             points = points.filter(p => p.x <= m);
           }
           if(c.point === d.point) {
             fillSquare(c.y, c.x, 1, width, c.point);
             points = points.filter(p => p.y <= c.point.y);
-          } else {
+          } else if(c.y !== outerHeight - 1) {
             const m = checkHorizLine(c, d, points, false);
             points = points.filter(p => p.y <= m);
           }
           if(a.point === c.point) {
             fillSquare(a.y, a.x, height, 1, a.point);
             points = points.filter(p => p.x >= a.point.x);
-          } else {
+          } else if(a.x !== 0) {
             const m = checkVertLine(a, c, points, true);
             points = points.filter(p => p.x >= m);
           }
